# JC-Compiler

./: .gitignore  CMakeLists.txt  README.md  RealCode.txt  keywords.txt  main.cpp  testFile.txt  types.txt
ASM/: printf.asm  printf.txt  simple_printf  simple_printf.asm  simple_printf_2  simple_printf_2.asm
Diagrams/: .$ForLoopStates.drawio.bkp  .$FunctionStates.drawio.bkp  .$SyntaxTreeClassDiagram.drawio.bkp  .$WhileLoopState.drawio.bkp  AbstractSyntaxTreeClasses.puml  ForLoopStates.drawio  FunctionStates.drawio  SyntaxTreeClassDiagram.drawio  WhileLoopState.drawio
LanguageArchitecture/: klootzakkerij.txt  structure.txt
Libs/: Errors.cpp  Errors.h  Helper.cpp  Helper.h  Lexer.cpp  Lexer.h  PreProcesser.cpp  PreProcesser.h  PreProcesserHelper.cpp  PreProcesserHelper.h  Tokens.cpp  Tokens.h  Tree.cpp  Tree.h  TreeHelper.cpp  TreeHelper.h  TreeNodes.cpp  TreeNodes.h  TreeNodesRevamped.cpp  TreeNodesRevamped.h
TestingCPP/: TestingOperators.cpp
TestingCPP/DecoratorPattern/: Decorator.cpp  Decorators2.cpp
TestingCPP/Polymorphism/: Geleerd.md  poly.cpp
TestingCPP/ToASM/: asm.asm  main.c
TestingCPP/Unique_Pointers/: unique_pointers.cpp
